# mongodb_hackathon

./: .env.example  .gitignore  .graphifyignore  HANDOVER.md  Readme.md  SETUP.md  config.py  pyproject.toml  seed_skills.py  server.py
.claude/: settings.local.json
agent/: orchestrator.py  state.py
agent/nodes/: ingest.py  memory_lookup.py  respond.py  route.py
claude_sonnet_planned_files/: CODE_STRUCTURE.md  FLOW.md  README.md
forge/: forge.py  prompts.py  validator.py
graphify-out/: .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
hackathon_docs/: hackathon_details.md
memory/: client.py  search.py  store.py
notifications/: dispatcher.py
schemas/: __init__.py  session.py  skill.py  task.py
scripts/: ensure_vector_index.py  test_lambda_validator.py
static/: index.html
tests/synthetic_cases/: transfer_cases.json
voice/: gateway.py  medimind_agent.py  speak.py  transcribe.py
